--- a/LiraAiBOT/.env.example
+++ b/LiraAiBOT/.env.example
@@ -7,6 +7,13 @@ OPENROUTER_API_KEY=sk-or-v1-xxx
 # === TELEGRAM ===
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 
+# === GROQ (быстрые бесплатные модели) ===
+GROQ_API_KEY=gsk_xxx
+GROQ_BASE_URL=https://api.groq.com/openai/v1
+
+# === CEREBRAS (сверхбыстрые модели) ===
+CEREBRAS_API_KEY=csk_xxx
+
 # === ГЕНЕРАЦИЯ ИЗОБРАЖЕНИЙ ===
 HF_API_KEY=your_huggingface_api_key
 
