--- a/LiraAiBOT/requirements.txt
+++ b/LiraAiBOT/requirements.txt
@@ -41,6 +41,9 @@ telethon>=1.34.0
 # Supabase (база данных)
 supabase>=2.0.0
 
+# Google Gemini API
+google-genai>=1.0.0
+
 # Дополнительные утилиты
 starlette
 typing-extensions
